# CourseWork_2

./: pyproject.toml
src/main/: main.py
src/main/class_BasicWord/: BasicWord.py
src/main/class_Player/: Player.py
src/utils/: utils.py
