[tool.poetry]
name = "coursework-2"
version = "0.1.0"
description = ""
authors = ["ilya <mrlivedance@vk.com>"]
readme = "README.md"
packages = [{include = "coursework_2"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
